Regression: Error in tracker correction #119773

Closed
opened 2024-03-22 07:52:00 +01:00 by Erwin-Krause · 10 comments

System Information
Operating system: Windows 10 Pro 22H2, Build 19045.4170
Graphics card: Nvidia GTX 1080 Ti (Studio-Driver 551.86)

Blender Version
Broken: 4.0.2, 9be62e85b7, blender-v4.0-release, 2023-12-05
Worked: 3.0.1

Short description of error
When trying to correct tracker under Blender 4.0.2 (also 4.0.0) an error occurred, described as follows (animated GIF-clips are running with Firefox and Chrome, example-clip Tomb_Raider_Demo_V000_fuer_XmediaRecode.mov ):
From Step 9. With every mouse left click in the search or pattern area, the tracker marker is deactivated and the search marker disappears. If you click on „clip“ at the top left to activate it again, the markers mentioned appear correctly again, but the error repeats itself with every new click in the search or pattern area, shown in GIF-clip Tracker_Move_Blender_4_0_2_V100.gif

Exact steps for others to reproduce the error

  1. Create a new project with “File->New->VPX”.
  2. Load MOV clip
  3. Activate “Search” under “Clip Display” on the right
  4. Click on “Prefetch” and “Set Scene Frames” under “Clip” on the left
  5. Set tracking settings, here select Pattern Size = 40, Search Size = 100 (both optional), Motion Model “Location, Rotation & Svale” and Match “Previous Frame”.
  6. Set a marker with Ctrl and left mouse click
  7. Start tracking with Ctrl+T
  8. At the bottom of the tracking screen (“graph” set) reset the track marker slightly until the marker stop is reached
  9. Try to make marker correction in the search or pattern area with the left mouse button pressed

.blend file: Bug_Report_Track_Move_Error_Blender_4_0_2_V000.blend
mov file: Tomb_Raider_Demo_V000_fuer_XmediaRecode.mov
error steps gif: Tracker_Move_Blender_4_0_2_V100.gif

Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Windows 10 Pro 22H2, Build 19045.4170 Graphics card: Nvidia GTX 1080 Ti (Studio-Driver 551.86) **Blender Version** Broken: 4.0.2, 9be62e85b727, blender-v4.0-release, 2023-12-05 Worked: 3.0.1 **Short description of error** When trying to correct tracker under Blender 4.0.2 (also 4.0.0) an error occurred, described as follows (animated GIF-clips are running with Firefox and Chrome, example-clip Tomb_Raider_Demo_V000_fuer_XmediaRecode.mov ): From Step 9. With every mouse left click in the search or pattern area, the tracker marker is deactivated and the search marker disappears. If you click on „clip“ at the top left to activate it again, the markers mentioned appear correctly again, but the error repeats itself with every new click in the search or pattern area, shown in GIF-clip Tracker_Move_Blender_4_0_2_V100.gif ![](attachments/64dcc750-828a-433c-8a98-c2e275007644) **Exact steps for others to reproduce the error** 1. Create a new project with “File->New->VPX”. 2. Load MOV clip 3. Activate “Search” under “Clip Display” on the right 4. Click on “Prefetch” and “Set Scene Frames” under “Clip” on the left 5. Set tracking settings, here select Pattern Size = 40, Search Size = 100 (both optional), Motion Model “Location, Rotation & Svale” and Match “Previous Frame”. 6. Set a marker with Ctrl and left mouse click 7. Start tracking with Ctrl+T 8. At the bottom of the tracking screen (“graph” set) reset the track marker slightly until the marker stop is reached 9. Try to make marker correction in the search or pattern area with the left mouse button pressed .blend file: Bug_Report_Track_Move_Error_Blender_4_0_2_V000.blend mov file: Tomb_Raider_Demo_V000_fuer_XmediaRecode.mov error steps gif: Tracker_Move_Blender_4_0_2_V100.gif Based on the default startup or an attached .blend file (as simple as possible).
Erwin-Krause added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-22 07:52:01 +01:00
Iliya Katushenock changed title from Error in tracker correction to Regression: Error in tracker correction 2024-03-22 12:36:15 +01:00
Iliya Katushenock added the
Interest
Motion Tracking
Interest
VFX & Video
labels 2024-03-22 12:38:04 +01:00

I can confirm that the tracker selection has changed in 3.5. However, I didn't find anything in the release notes mentioning this change.

Therefore, it may, in fact, be a regression.

@Sergey, does this issue ring any bells?

I can confirm that the tracker selection has changed in 3.5. However, I didn't find anything in the [release notes](https://developer.blender.org/docs/release_notes/3.5/vfx/) mentioning this change. Therefore, it may, in fact, be a regression. @Sergey, does this issue ring any bells?
Germano Cavalcante added
Module
VFX & Video
Status
Confirmed
and removed
Status
Needs Triage
Interest
VFX & Video
labels 2024-03-22 17:12:14 +01:00

@mano-wii The were some changes done to the selection logic, with the goal of preparing it to the clip editor toolification. It was not supposed to have noticeable user impact under typical usecases, hence was not listed in the notes.

It is a bit hard to tell exactly, but my understanding is that the issue is happening when you have LMB selection, and click quite far away from the actual draggable "widget". The behavior with that could have indeed changed, because I remember some (but not all) operations disregarded the maximum distance to the "widget", but now it is respected, and click is expected to happen within 12px radius around the "widget".

If you feel the tolerance is too strict, we can probably increase it to, say, 19. But need to be careful with that as it might have annoying effects later on (when a tool like tweak-or-add-marker is added).

@mano-wii The were some changes done to the selection logic, with the goal of preparing it to the clip editor toolification. It was not supposed to have noticeable user impact under typical usecases, hence was not listed in the notes. It is a bit hard to tell exactly, but my understanding is that the issue is happening when you have LMB selection, and click quite far away from the actual draggable "widget". The behavior with that could have indeed changed, because I remember some (but not all) operations disregarded the maximum distance to the "widget", but now it is respected, and click is expected to happen within 12px radius around the "widget". If you feel the tolerance is too strict, we can probably increase it to, say, 19. But need to be careful with that as it might have annoying effects later on (when a tool like tweak-or-add-marker is added).

@Sergey, I'm not sure if just tolerance has changed.
Using Click Drag to move to other selectable regions of the widget will no longer move. (could be an improvement for the move search area).
The tolerance of other selectable regions has also changed.
And Click Drag fast does not work to scale the search area.

3.4 4.2
3_4.gif 4_2.gif
@Sergey, I'm not sure if just tolerance has changed. Using Click Drag to move to other selectable regions of the widget will no longer move. (could be an improvement for the move search area). The tolerance of other selectable regions has also changed. And Click Drag fast does not work to scale the search area. | 3.4 | 4.2 | | --- | --- | | ![3_4.gif](/attachments/a2680c53-43a9-4515-a9c8-7a214f96e11b) | ![4_2.gif](/attachments/8edd6e5b-dd58-4275-a23c-1e6904890312) |
692 KiB
443 KiB
Author

Hello guys, thank you very much for taking care of this issue.

To be sure or to clarify what I mean, I'll add another gif tomorrow that shows this situation with Blender 3.0 and where it works correctly ;-)
At the moment I'm sitting at my notebook and am about to go to bed ;-)

Hello guys, thank you very much for taking care of this issue. To be sure or to clarify what I mean, I'll add another gif tomorrow that shows this situation with Blender 3.0 and where it works correctly ;-) At the moment I'm sitting at my notebook and am about to go to bed ;-)
Author

Good morning everyone,
here is the announced GIF, which shows the process I reported as it works correctly under Blender 3.0.
Except for the Blender version, everything is identical to the report, and step 9) shows the expected behavior here.

Good morning everyone, here is the announced GIF, which shows the process I reported as it works correctly under Blender 3.0. Except for the Blender version, everything is identical to the report, and step 9) shows the expected behavior here.

I think i see what happens. There is discrepancy between widget drawing and the picking. It kind of was always there, but in the example it became more apparent via another change which made it so clicking in the middle of nowhere would now de-select everything (matching behavior in other areas, and allowing to have some trak+add new markers behavior in the future).

I'll look into making it so there is no discrepancy between drawing and picking.

I think i see what happens. There is discrepancy between widget drawing and the picking. It kind of was always there, but in the example it became more apparent via another change which made it so clicking in the middle of nowhere would now de-select everything (matching behavior in other areas, and allowing to have some trak+add new markers behavior in the future). I'll look into making it so there is no discrepancy between drawing and picking.
Sergey Sharybin self-assigned this 2024-03-27 15:18:51 +01:00

@mano-wii Can you help me and test #119971 and if it behaves more predictable and closer to what it was in 3.6?
Is still not fully ideal, but i believe it should be much closer to the old behavior, and is definitely improving situation on my configuration.

@mano-wii Can you help me and test #119971 and if it behaves more predictable and closer to what it was in 3.6? Is still not fully ideal, but i believe it should be much closer to the old behavior, and is definitely improving situation on my configuration.
Author

Hello guys,

this morning I downloaded Blender 4.1.1

  • 4.1.1 Release Candidate
  • 2024-04-04
  • ba820cf8f4
  • blender-v4.1-release

the reportet BUG is fixed, well done!!!

Many greetings from Hamburg, and everyone stay in health :-)

Hello guys, this morning I downloaded Blender 4.1.1 - 4.1.1 Release Candidate - 2024-04-04 - ba820cf8f48b - blender-v4.1-release the reportet BUG is fixed, well done!!! Many greetings from Hamburg, and everyone stay in health :-)

This is a bit strange, I did see some issues in the code, but those were not landed yet.

I am planning on landing #119971 as a small incremental change. But think I've also found that some code adopted from the tracking_tools branch does not work the way it is intended, because of some other changes. I'd need a bit more time to verify it and land a final fix.

This is a bit strange, I did see some issues in the code, but those were not landed yet. I am planning on landing #119971 as a small incremental change. But think I've also found that some code adopted from the tracking_tools branch does not work the way it is intended, because of some other changes. I'd need a bit more time to verify it and land a final fix.

Committed all the related changes of little fixes which I've found while looking into this issue. There are still some differences compared to 3.0, but those are compromises we'd need to make in the future anyway. At least until some actual bug in the updated code is found.

Committed all the related changes of little fixes which I've found while looking into this issue. There are still some differences compared to 3.0, but those are compromises we'd need to make in the future anyway. At least until some actual bug in the updated code is found.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-04-22 15:48:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119773
No description provided.